--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lineicons": "^2.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-parallax-tilt": "^1.5.28",
+    "react-responsive-modal": "^6.1.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "typeit-react": "^0.1.3",
+    "web-vitals": "^1.1.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
