--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lineicons": "^2.2.0",
+    "react-multi-carousel": "^2.6.5",
     "react-owl-carousel": "^2.3.3",
     "react-parallax-tilt": "^1.5.28",
     "react-responsive-modal": "^6.1.0",
